Rearrange files and add sample article

--- a/src/article_defaults.sty
+++ b/src/article_defaults.sty
@@ -2,8 +2,7 @@
 \usepackage{mypackages,mycommands}
 
 % paper size & margins, and indentations
-\usepackage[letterpaper,
-top=1in,bottom=1in,left=1in,right=1in]{geometry}
+\usepackage[letterpaper,top=1in,bottom=1in,left=1in,right=1in]{geometry}
 
 % titles
 \newcommand{\fullpagetitle}[1]{\title{\vspace*{\fill}\huge\bfseries\scshape #1}}
