--- a/src/mycommands.sty
+++ b/src/mycommands.sty
@@ -71,8 +71,8 @@
   \newcommand  {\CFL} {\mathrm{CFL}}
   
   \newcommand  {\atanh}{\mathrm{atanh}}
-  \renewcommand{\v  }[1]{\mathbf{#1}}
-  \newcommand  {\nv  }[1]{\hat{\vec{#1}}}
+  \renewcommand{\v}[1]{\symbf{#1}}
+  \newcommand  {\nv}[1]{\hat{\v{#1}}}
   
   \newcommand  {\Dpart}[2]{\dfrac{\partial #1}{\partial #2}}
   \newcommand  {\Dfull}[2]{\frac{\dd #1 }{\dd #2}}
