Add beamer material

--- a/src/article_defaults.sty
+++ b/src/article_defaults.sty
@@ -1,5 +1,18 @@
 \ProvidesPackage{article_defaults}
+
+\usepackage[usenames,dvipsnames]{xcolor}      %allow color figures and syntax highlighting
+
+% web/mailto/ref links
+\usepackage[hidelinks,
+%% colorlinks=true,
+%% linkcolor=cyan,
+%% citecolor=cyan,
+%% urlcolor=cyan,
+linktoc=all]{hyperref}
+\usepackage{url}
+
 \usepackage{mypackages,mycommands}
+
 
 % paper size & margins, and indentations
 \usepackage[letterpaper,top=1in,bottom=1in,left=1in,right=1in]{geometry}
