--- a/shared/mypackages.sty
+++ b/shared/mypackages.sty
@@ -20,7 +20,7 @@ style=numeric-comp,useprefix=true]{biblatex}
 \usepackage{subcaption}                       %subfigures
 \usepackage{booktabs,multirow}                %more advanced tables
 \graphicspath{{figures/}}                     %figure directory
-\usepackage{tikz,pgfplots}                    %create figures/graphics manually
+%\usepackage{tikz,pgfplots}                    %create figures/graphics manually
 
 % source code
 \usepackage{listings,verbatim}
