Fix build system

--- a/beamer/beamer_defaults.sty
+++ b/beamer/beamer_defaults.sty
@@ -15,6 +15,7 @@
 
 % for highlighting stuff on a slide
 % http://tex.stackexchange.com/questions/6135/how-to-make-beamer-overlays-with-tikz-node?
+\usepackage{tikz,pgfplots}                    %create figures/graphics manually
 \usetikzlibrary{arrows,shapes}
 \tikzstyle{every picture}+=[remember picture]
 \everymath{\displaystyle}
